--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,6 +15,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
+      actions: read
 
     steps:
       - name: Checkout code
@@ -23,13 +24,24 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+       - name: Log in to GitHub Container Registry
+         if: github.event_name != 'pull_request'
+         uses: docker/login-action@v3
+         with:
+           registry: ghcr.io
+           username: ${{ github.actor }}
+           password: ${{ secrets.GITHUB_TOKEN }}
+
+       - name: Debug package permissions
+         if: github.event_name != 'pull_request'
+         run: |
+           echo "Repository: ${{ github.repository }}"
+           echo "Actor: ${{ github.actor }}"
+           echo "Checking package permissions..."
+           curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                -H "Accept: application/vnd.github.v3+json" \
+                https://api.github.com/repos/${{ github.repository }}/packages \
+                | head -20
 
       - name: Extract metadata
         id: meta
