feat: implement reproducible builds
- Pin dependency versions exactly in package.json
- Add --production flag to build scripts for consistency
- Pin Bun version to 1.2.21 across all environments (CI/CD, local, Docker)
- Create .bun-version file for local development
- Add CI/CD reproducible builds verification job
- Create verification scripts for local testing
- Update documentation with reproducible builds details
- Add reproducible builds badge and feature to README

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -64,6 +64,8 @@ jobs:
       # or others). This is typically only required for manual builds.
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: '1.2.21'
 
       - name: Install dependencies
         run: bun install
