--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: '1.2.21'
 
       - name: Install dependencies
         run: bun install
@@ -65,13 +67,57 @@ jobs:
           bun install --frozen-lockfile
           if command -v npm &> /dev/null; then
             npm audit --audit-level=moderate || true
-          fi
-          echo "✅ Security audit completed"
+           fi
+           echo "✅ Security audit completed"
 
-  test-matrix:
-    name: Test Matrix (Node.js ${{ matrix.node-version }}, ${{ matrix.os }})
-    runs-on: ${{ matrix.os }}
-    needs: quality
+   reproducible-builds:
+     name: Reproducible Builds Verification
+     runs-on: ubuntu-latest
+     needs: quality
+
+     steps:
+       - name: Checkout code
+         uses: actions/checkout@v4
+
+       - name: Setup Bun
+         uses: oven-sh/setup-bun@v1
+         with:
+           bun-version: '1.2.21'
+
+       - name: Install dependencies
+         run: bun install --frozen-lockfile
+
+       - name: Build project (Run 1)
+         run: |
+           bun run clean
+           bun run build
+           find dist -type f -exec sha256sum {} \; | sort > build1.sha256
+
+       - name: Build project (Run 2)
+         run: |
+           bun run clean
+           bun run build
+           find dist -type f -exec sha256sum {} \; | sort > build2.sha256
+
+       - name: Compare builds
+         run: |
+           echo "📊 Comparing build artifacts..."
+           if diff build1.sha256 build2.sha256; then
+             echo "✅ SUCCESS: Builds are reproducible!"
+           else
+             echo "❌ FAILURE: Builds are not reproducible"
+             echo "Build 1 checksums:"
+             cat build1.sha256
+             echo ""
+             echo "Build 2 checksums:"
+             cat build2.sha256
+             exit 1
+           fi
+
+   test-matrix:
+     name: Test Matrix (Node.js ${{ matrix.node-version }}, ${{ matrix.os }})
+     runs-on: ${{ matrix.os }}
+     needs: [quality, reproducible-builds]
 
     strategy:
       matrix:
@@ -84,6 +130,8 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: '1.2.21'
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
