--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "dev": "bun run --hot src/index.ts",
     "build": "bun build src/index.ts --outdir dist --target node --external \"@anthropic-ai/sdk\" --external \"openai\" --external \"chalk\" --external \"ink\" --external \"react\" --external \"yoga-wasm-web\" && cp node_modules/yoga-wasm-web/dist/yoga.wasm dist/",
-    "build:exe": "bun build src/binary.ts --target node --compile --outfile dist/fosscode",
+    "build:exe": "bun build src/binary.ts --target node --compile --production --outfile dist/fosscode",
     "build:docker": "docker build -t fosscode .",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
@@ -41,23 +41,23 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
-    "@testing-library/jest-dom": "^6.8.0",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^19.1.11",
-    "@types/react-dom": "^19.1.8",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.0.0",
-    "eslint-plugin-react": "^7.33.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "ink-testing-library": "^4.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^30.0.5",
-    "prettier": "^3.0.0",
-    "ts-jest": "^29.4.1",
-    "typescript": "^5.0.0"
+    "@testing-library/jest-dom": "6.8.0",
+    "@testing-library/react": "16.3.0",
+    "@types/jest": "30.0.0",
+    "@types/node": "20.19.11",
+    "@types/react": "19.1.11",
+    "@types/react-dom": "19.1.8",
+    "@typescript-eslint/eslint-plugin": "6.21.0",
+    "@typescript-eslint/parser": "6.21.0",
+    "eslint": "8.57.1",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "ink-testing-library": "4.0.0",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "30.0.5",
+    "prettier": "3.6.2",
+    "ts-jest": "29.4.1",
+    "typescript": "5.9.2"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -107,19 +107,19 @@
     ]
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.60.0",
-    "@modelcontextprotocol/sdk": "^1.17.4",
-    "@playwright/mcp": "^0.0.35",
-    "chalk": "^5.0.0",
-    "cheerio": "^1.1.2",
-    "commander": "^11.0.0",
-    "ink": "^4.0.0",
-    "ink-spinner": "^5.0.0",
-    "ink-text-input": "^5.0.0",
-    "openai": "^4.0.0",
-    "react": "^18.0.0",
-    "react-devtools-core": "^6.1.5",
-    "yoga-wasm-web": "^0.3.3"
+    "@anthropic-ai/sdk": "0.60.0",
+    "@modelcontextprotocol/sdk": "1.17.4",
+    "@playwright/mcp": "0.0.35",
+    "chalk": "5.6.0",
+    "cheerio": "1.1.2",
+    "commander": "11.1.0",
+    "ink": "4.4.1",
+    "ink-spinner": "5.0.0",
+    "ink-text-input": "5.0.1",
+    "openai": "4.104.0",
+    "react": "18.3.1",
+    "react-devtools-core": "6.1.5",
+    "yoga-wasm-web": "0.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
