--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,16 +32,18 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Debug package permissions
-        if: github.event_name != 'pull_request'
-        run: |
-          echo "Repository: ${{ github.repository }}"
-          echo "Actor: ${{ github.actor }}"
-          echo "Checking package permissions..."
-          curl -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-               -H "Accept: application/vnd.github.v3+json" \
-               https://api.github.com/repos/${{ github.repository }}/packages \
-               | head -20
+       - name: Debug package permissions
+         if: github.event_name != 'pull_request'
+         run: |
+           echo "Repository: ${{ github.repository }}"
+           echo "Actor: ${{ github.actor }}"
+           echo "Event: ${{ github.event_name }}"
+           echo "Ref: ${{ github.ref }}"
+           echo "Token permissions:"
+           curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+                -H "Accept: application/vnd.github.v3+json" \
+                https://api.github.com/repos/${{ github.repository }} \
+                | jq '.permissions // "No permissions found"'
 
       - name: Extract metadata
         id: meta
@@ -55,17 +57,17 @@ jobs:
             type=semver,pattern={{major}}.{{minor}}
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build Docker image
-        id: push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+       - name: Build Docker image
+         id: push
+         uses: docker/build-push-action@v5
+         with:
+           context: .
+           platforms: linux/amd64,linux/arm64
+           push: ${{ github.event_name != 'pull_request' }}
+           tags: ${{ steps.meta.outputs.tags }}
+           labels: ${{ steps.meta.outputs.labels }}
+           cache-from: type=gha
+           cache-to: type=gha,mode=max
 
       - name: Generate artifact attestation
         if: github.event_name != 'pull_request'
