--- a/package.json
+++ b/package.json
@@ -21,14 +21,17 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
     "format": "prettier --write src/**/*.ts",
-    "test": "jest",
+    "test": "npx jest --testPathIgnorePatterns=\"e2e\"",
+    "test:all": "npx jest",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
     "release:patch": "./scripts/release.sh patch",
     "release:minor": "./scripts/release.sh minor",
     "release:major": "./scripts/release.sh major",
     "release": "./scripts/release.sh patch",
-    "publish": "./scripts/publish.sh"
+    "publish": "./scripts/publish.sh",
+    "perf": "node scripts/performance-test.js",
+    "performance-test": "node scripts/performance-test.js"
   },
   "keywords": [
     "cli",
@@ -53,8 +56,8 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "4.6.2",
     "ink-testing-library": "4.0.0",
-    "jest": "29.7.0",
-    "jest-environment-jsdom": "30.0.5",
+    "jest": "30.1.1",
+    "jest-environment-jsdom": "30.1.1",
     "prettier": "3.6.2",
     "ts-jest": "29.4.1",
     "typescript": "5.9.2"
