feat: add CLI testing examples and update test configuration
- Add CLI_TESTING_MIGRATION.md documentation
- Add cli-testing-library-example.test.ts for CLI testing
- Add interactive-cli-example.test.ts for interactive testing
- Update jest.config.js and setup.ts for improved testing
- Update package.json and bun.lock dependencies

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/react-dom": "19.1.8",
     "@typescript-eslint/eslint-plugin": "6.21.0",
     "@typescript-eslint/parser": "6.21.0",
+    "cli-testing-library": "^3.0.1",
     "eslint": "8.57.1",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "4.6.2",
