--- a/mcp-config.json
+++ b/mcp-config.json
@@ -6,7 +6,7 @@
   "providers": {
     "mcp": {
       "mcpServerCommand": "npx",
-      "mcpServerArgs": ["@playwright/mcp@latest"],
+      "mcpServerArgs": ["-y", "@upstash/context7-mcp@latest"],
       "timeout": 30000,
       "verbose": true
     }
