--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,11 +44,12 @@ jobs:
       - name: Build
         run: bun run build
 
-        # Temporarily disabled due to npm 24-hour republish restriction
-        # - name: Setup npm registry
-        #   run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-        #   env:
-        #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        - name: Setup npm registry
+          run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-        # - name: Publish to npm
-        #   run: bunx npm publish
+        - name: Publish to npm
+          run: bunx npm publish
+          # Note: If this fails due to npm's 24-hour republish restriction,
+          # the package will need to be published manually after 24 hours
