--- a/package.json
+++ b/package.json
@@ -50,12 +50,12 @@
     "@types/node": "20.19.11",
     "@types/react": "19.1.11",
     "@types/react-dom": "19.1.8",
-    "@typescript-eslint/eslint-plugin": "7.18.0",
-    "@typescript-eslint/parser": "7.18.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "cli-testing-library": "^3.0.1",
     "eslint": "9.34.0",
     "eslint-plugin-react": "7.37.5",
-    "eslint-plugin-react-hooks": "4.6.2",
+    "eslint-plugin-react-hooks": "^5.0.0",
     "ink-testing-library": "4.0.0",
     "jest": "30.1.1",
     "jest-environment-jsdom": "30.1.1",
@@ -75,11 +75,19 @@
     "ink-text-input": "5.0.1",
     "openai": "4.104.0",
     "react": "18.3.1",
-    "react-devtools-core": "6.1.5",
+    "react-dom": "18.3.1",
     "yoga-wasm-web": "0.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "peerDependencies": {
+    "react-devtools-core": "^4.19.1"
+  },
+  "peerDependenciesMeta": {
+    "react-devtools-core": {
+      "optional": true
+    }
   },
   "preferUnplugged": true
 }
