feat: add messaging platform support and documentation
- Add Telegram messaging platform integration
- Add comprehensive messaging platforms documentation
- Add messaging platform tests
- Update configuration defaults
- Update package dependencies
- Minor improvements to command handling

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@testing-library/react": "16.3.0",
     "@types/jest": "30.0.0",
     "@types/node": "20.19.11",
+    "@types/node-telegram-bot-api": "^0.64.10",
     "@types/react": "19.1.11",
     "@types/react-dom": "19.1.8",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
@@ -73,6 +74,7 @@
     "ink": "4.4.1",
     "ink-spinner": "5.0.0",
     "ink-text-input": "5.0.1",
+    "node-telegram-bot-api": "^0.66.0",
     "openai": "4.104.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
