feat: Add Telegram bot integration
- Add node-telegram-bot-api dependency and types
- Implement TelegramPlatform class with full messaging support
- Add message sending with Markdown parsing and fallback
- Add message listening with polling mechanism
- Add message splitting for 4096 character limit
- Add comprehensive error handling and validation
- Add test files for Telegram functionality
- Remove hardcoded secrets and use environment variables

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -6,7 +6,7 @@
   "providers": {
     "mcp": {
       "mcpServerCommand": "npx",
-      "mcpServerArgs": ["-y", "@upstash/context7-mcp@latest"],
+      "mcpServerArgs": ["@playwright/mcp@latest"],
       "timeout": 30000,
       "verbose": true
     }
