--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@anthropic-ai/sdk": "0.60.0",
     "@modelcontextprotocol/sdk": "1.17.4",
     "@playwright/mcp": "0.0.35",
+    "array.prototype.findindex": "^2.2.4",
     "chalk": "5.6.0",
     "cheerio": "1.1.2",
     "commander": "11.1.0",
