cleanup: Remove unnecessary dependency overrides
- Remove package.json overrides that are no longer needed
- Dependencies are now secure without manual overrides

--- a/package.json
+++ b/package.json
@@ -92,10 +92,5 @@
       "optional": true
     }
   },
-  "preferUnplugged": true,
-  "overrides": {
-    "form-data": "^4.0.0",
-    "tough-cookie": "^4.1.3",
-    "request": "^2.88.2"
-  }
+  "preferUnplugged": true
 }
