feat: add MCP server filtering functionality
- Add --mcp option to filter MCP servers
- Update default MCP server to @playwright/mcp
- Implement MCP server filtering in ProviderManager
- Enhance MCP tools initialization for multiple servers

--- a/mcp-config.json
+++ b/mcp-config.json
@@ -9,7 +9,7 @@
     },
     "mcp": {
       "mcpServerCommand": "npx",
-      "mcpServerArgs": ["-y", "@upstash/context7-mcp@latest"],
+      "mcpServerArgs": ["@playwright/mcp@latest"],
       "timeout": 30000,
       "verbose": true
     }
