--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
     "format": "prettier --write src/**/*.ts",
-    "test": "npx jest --testPathIgnorePatterns=\"e2e\"",
-    "test:all": "npx jest",
+    "test": "bun test --testPathIgnorePatterns=\"e2e\"",
+    "test:all": "bun test",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
     "release:patch": "./scripts/release.sh patch",
@@ -57,10 +57,10 @@
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "^5.0.0",
     "ink-testing-library": "4.0.0",
-    "jest": "30.1.1",
-    "jest-environment-jsdom": "30.1.1",
+    "jest": "29.6.0",
+    "jest-environment-jsdom": "29.6.0",
     "prettier": "3.6.2",
-    "ts-jest": "^29.4.1",
+    "ts-jest": "29.1.0",
     "typescript": "5.9.2"
   },
   "dependencies": {
@@ -69,6 +69,7 @@
     "@modelcontextprotocol/sdk": "1.17.4",
     "@playwright/mcp": "0.0.35",
     "@types/jsdom": "^21.1.7",
+    "ansi-styles": "^6.2.1",
     "array.prototype.findindex": "^2.2.4",
     "chalk": "5.6.0",
     "cheerio": "1.1.2",
