feat: implement context percentage display for LLM usage monitoring
- Add real-time context window usage tracking and display
- Support multiple display formats (percentage, tokens, both)
- Implement progressive context usage warnings
- Add CLI flags: --show-context, --context-format, --context-threshold
- Update configuration options in config.json
- Create comprehensive unit tests for context calculations
- Update README with usage examples and documentation
- Maintain backward compatibility with existing functionality

This implementation provides users with visibility into their LLM context usage,
helping them optimize conversations and avoid hitting context limits.

--- a/config.example.json
+++ b/config.example.json
@@ -3,6 +3,9 @@
   "defaultModel": "gpt-3.5-turbo",
   "maxConversations": 100,
   "theme": "dark",
+  "showContextPercentage": true,
+  "contextDisplayFormat": "both",
+  "contextWarningThreshold": 80,
   "providers": {
     "openai": {
       "apiKey": "your-openai-api-key-here",
