--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "jest": "29.6.0",
     "jest-environment-jsdom": "29.6.0",
     "prettier": "3.6.2",
+    "source-map": "^0.7.6",
     "ts-jest": "29.1.0",
     "typescript": "5.9.2"
   },
@@ -69,11 +70,13 @@
     "@modelcontextprotocol/sdk": "1.17.4",
     "@playwright/mcp": "0.0.35",
     "@types/jsdom": "^21.1.7",
+    "abort-controller": "^3.0.0",
     "ansi-styles": "^6.2.1",
     "array.prototype.findindex": "^2.2.4",
     "chalk": "5.6.0",
     "cheerio": "1.1.2",
     "commander": "11.1.0",
+    "event-target-shim": "^6.0.2",
     "grammy": "^1.38.1",
     "ink": "4.4.1",
     "ink-spinner": "5.0.0",
