--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "ink-spinner": "5.0.0",
     "ink-text-input": "5.0.1",
     "jsdom": "^26.1.0",
+    "json-stable-stringify-without-jsonify": "^1.0.1",
     "openai": "4.104.0",
     "puppeteer": "^24.17.1",
     "react": "18.3.1",
