fix: add missing grammy dependency for Telegram platform
- Add grammy@^1.30.0 to dependencies in package.json
- Update bun.lock with new dependency
- Fixes CI build failure: 'Could not resolve: grammy'

--- a/package.json
+++ b/package.json
@@ -113,6 +113,7 @@
     "chalk": "^5.0.0",
     "cheerio": "^1.1.2",
     "commander": "^11.0.0",
+    "grammy": "^1.30.0",
     "ink": "^4.0.0",
     "ink-spinner": "^5.0.0",
     "ink-text-input": "^5.0.0",
