--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build:exe": "bun build src/binary.ts --target node --compile --outfile dist/fosscode",
     "build:docker": "docker build -t fosscode .",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/**/*.ts --quiet",
+    "lint": "eslint src/**/*.ts --quiet --format=compact",
     "format": "prettier --write src/**/*.ts",
-    "test": "jest",
+    "test": "NODE_OPTIONS=\"--experimental-vm-modules\" node --experimental-specifier-resolution=node node_modules/jest/bin/jest.js",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
     "release:patch": "./scripts/release.sh patch",
@@ -53,11 +53,13 @@
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "ink-testing-library": "^4.0.0",
-    "jest": "^29.0.0",
-    "jest-environment-jsdom": "^30.0.5",
+    "jest": "^28.0.0",
+    "jest-environment-jsdom": "^28.0.0",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.1",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "execa": "^6.0.0",
+    "@jest/globals": "^29.0.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -88,9 +90,6 @@
         }
       ]
     },
-    "transformIgnorePatterns": [
-      "node_modules/(?!(cheerio|@modelcontextprotocol|chalk|ink|react|yoga-wasm-web)/)"
-    ],
     "collectCoverageFrom": [
       "src/**/*.ts",
       "src/**/*.tsx",
