--- a/package.json
+++ b/package.json
@@ -41,29 +41,39 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "@babel/preset-typescript": "^7.27.1",
+    "@jest/globals": "^28.0.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "^28.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "babel-jest": "^30.1.1",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "execa": "^6.0.0",
     "ink-testing-library": "^4.0.0",
     "jest": "^28.0.0",
     "jest-environment-jsdom": "^28.0.0",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.4.1",
-    "typescript": "^5.0.0",
-    "execa": "^6.0.0",
-    "@jest/globals": "^29.0.0"
+    "ts-jest": "^28.0.0",
+    "typescript": "^5.0.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
     "testEnvironment": "jsdom",
+    "globals": {
+      "ts-jest": {
+        "useESM": true,
+        "isolatedModules": true
+      }
+    },
     "setupFilesAfterEnv": [
       "<rootDir>/src/__tests__/setup.ts"
     ],
@@ -77,13 +87,7 @@
       "**/?(*.)+(spec|test).tsx"
     ],
     "transform": {
-      "^.+\\.ts$": [
-        "ts-jest",
-        {
-          "useESM": true
-        }
-      ],
-      "^.+\\.tsx$": [
+      "^.+\\.(ts|tsx)$": [
         "ts-jest",
         {
           "useESM": true
