--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "build:exe": "bun build src/binary.ts --target node --compile --outfile dist/fosscode",
     "build:docker": "docker build -t fosscode .",
     "typecheck": "tsc --noEmit",
-    "lint": "eslint src/**/*.ts --quiet --format=compact",
+    "lint": "eslint src/**/*.ts --quiet",
     "format": "prettier --write src/**/*.ts",
-    "test": "NODE_OPTIONS=\"--experimental-vm-modules\" node --experimental-specifier-resolution=node node_modules/jest/bin/jest.js",
+    "test": "jest",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
     "release:patch": "./scripts/release.sh patch",
@@ -41,39 +41,29 @@
   "author": "Your Name",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3",
-    "@babel/preset-typescript": "^7.27.1",
-    "@jest/globals": "^28.0.0",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
-    "@types/jest": "^28.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^19.1.11",
     "@types/react-dom": "^19.1.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "babel-jest": "^30.1.1",
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "execa": "^6.0.0",
     "ink-testing-library": "^4.0.0",
-    "jest": "^28.0.0",
-    "jest-environment-jsdom": "^28.0.0",
+    "jest": "^29.0.0",
+    "jest-environment-jsdom": "^30.0.5",
     "prettier": "^3.0.0",
-    "ts-jest": "^28.0.0",
-    "typescript": "^5.0.0"
+    "ts-jest": "^29.4.1",
+    "typescript": "^5.0.0",
+    "jest-circus": "^29.0.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
     "testEnvironment": "jsdom",
-    "globals": {
-      "ts-jest": {
-        "useESM": true,
-        "isolatedModules": true
-      }
-    },
+    "testRunner": "jest-circus/runner",
     "setupFilesAfterEnv": [
       "<rootDir>/src/__tests__/setup.ts"
     ],
@@ -87,13 +77,22 @@
       "**/?(*.)+(spec|test).tsx"
     ],
     "transform": {
-      "^.+\\.(ts|tsx)$": [
+      "^.+\\.ts$": [
+        "ts-jest",
+        {
+          "useESM": true
+        }
+      ],
+      "^.+\\.tsx$": [
         "ts-jest",
         {
           "useESM": true
         }
       ]
     },
+    "transformIgnorePatterns": [
+      "node_modules/(?!(cheerio|@modelcontextprotocol|chalk|ink|react|yoga-wasm-web)/)"
+    ],
     "collectCoverageFrom": [
       "src/**/*.ts",
       "src/**/*.tsx",
@@ -101,7 +100,7 @@
       "!src/index.ts"
     ],
     "moduleNameMapper": {
-      "^(\\.{1,2}/.*)\\.js$": "$1",
+      "^(.{1,2}/.*).js$": "$1",
       "^cheerio$": "<rootDir>/src/__mocks__/cheerio.js"
     },
     "extensionsToTreatAsEsm": [
