--- a/package.json
+++ b/package.json
@@ -60,6 +60,9 @@
     "typescript": "^5.0.0",
     "jest-circus": "^29.0.0"
   },
+  "resolutions": {
+    "slice-ansi": "4.0.0"
+  },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
     "testEnvironment": "jsdom",
