--- a/package.json
+++ b/package.json
@@ -61,7 +61,9 @@
     "jest-circus": "^29.0.0"
   },
   "resolutions": {
-    "slice-ansi": "4.0.0"
+    "slice-ansi": "7.1.0",
+    "ansi-styles": "6.2.1",
+    "@alcalzone/ansi-tokenize": "0.2.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -104,7 +106,8 @@
     ],
     "moduleNameMapper": {
       "^(.{1,2}/.*).js$": "$1",
-      "^cheerio$": "<rootDir>/src/__mocks__/cheerio.js"
+      "^cheerio$": "<rootDir>/src/__mocks__/cheerio.js",
+      "^chalk$": "<rootDir>/src/__mocks__/chalk.js"
     },
     "extensionsToTreatAsEsm": [
       ".ts",
