Add pre-push quality checks and fix formatting
- Add scripts/pre-push-checks.sh for CI-equivalent quality checks
- Add scripts/setup-git-hooks.sh for automatic pre-push hooks
- Add scripts/README.md with documentation
- Fix package.json format script to include .tsx files
- Apply formatting fixes to UI components

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:docker": "docker build -t fosscode .",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
-    "format": "prettier --write src/**/*.ts",
+    "format": "prettier --write src/**/*.{ts,tsx}",
     "test": "jest",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
