--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
     "format": "prettier --write src/**/*.{ts,tsx}",
-    "test": "jest",
+    "test": "jest --testPathIgnorePatterns=e2e",
+    "test:e2e": "jest --testPathPatterns=e2e",
+    "test:all": "jest",
     "clean": "rm -rf dist",
     "start": "bun run src/index.ts",
     "release:patch": "./scripts/release.sh patch",
@@ -52,18 +54,14 @@
     "eslint": "^8.0.0",
     "eslint-plugin-react": "^7.33.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "execa": "8",
     "ink-testing-library": "^4.0.0",
-    "jest": "^29.0.0",
-    "jest-circus": "^29.0.0",
-    "jest-environment-jsdom": "^30.0.5",
+    "jest": "^30.1.1",
+    "jest-circus": "^30.1.1",
+    "jest-environment-jsdom": "^30.1.1",
     "prettier": "^3.0.0",
     "ts-jest": "^29.4.1",
     "typescript": "^5.0.0"
-  },
-  "resolutions": {
-    "slice-ansi": "7.1.0",
-    "ansi-styles": "6.2.1",
-    "@alcalzone/ansi-tokenize": "0.2.0"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -96,7 +94,7 @@
       ]
     },
     "transformIgnorePatterns": [
-      "node_modules/(?!(cheerio|@modelcontextprotocol|chalk|ink|react|yoga-wasm-web)/)"
+      "node_modules/(?!(cheerio|@modelcontextprotocol|ink|react|yoga-wasm-web|execa)/)"
     ],
     "collectCoverageFrom": [
       "src/**/*.ts",
@@ -117,7 +115,7 @@
     "@anthropic-ai/sdk": "^0.60.0",
     "@modelcontextprotocol/sdk": "^1.17.4",
     "@playwright/mcp": "^0.0.35",
-    "chalk": "^4.1.2",
+    "chalk": "4.1.2",
     "cheerio": "^1.1.2",
     "commander": "^11.0.0",
     "grammy": "^1.30.0",
