--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 1.2.21
 
       - name: Install dependencies
         run: bun install
@@ -84,6 +86,8 @@ jobs:
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: 1.2.21
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
