--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
     "chalk": "4.1.2",
     "cheerio": "^1.1.2",
     "commander": "^11.0.0",
+    "gpt-tokenizer": "^3.0.1",
     "grammy": "^1.30.0",
     "ink": "^4.0.0",
     "ink-spinner": "^5.0.0",
