--- a/package.json
+++ b/package.json
@@ -116,5 +116,8 @@
   "engines": {
     "node": ">=18.0.0"
   },
+  "overrides": {
+    "formdata-node": "^6.0.0"
+  },
   "preferUnplugged": true
 }
