feat: update various components

--- a/package.json
+++ b/package.json
@@ -97,19 +97,20 @@
     }
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.60.0",
-    "@modelcontextprotocol/sdk": "^1.17.4",
-    "@playwright/mcp": "^0.0.35",
-    "chalk": "4.1.2",
+    "@anthropic-ai/sdk": "0.62.0",
+    "@modelcontextprotocol/sdk": "1.18.0",
+    "@playwright/mcp": "0.0.37",
+    "picocolors": "1.1.1",
     "cheerio": "^1.1.2",
-    "commander": "^11.0.0",
+    "commander": "14.0.1",
     "gpt-tokenizer": "^3.0.1",
-    "grammy": "^1.30.0",
-    "ink": "^4.0.0",
+    "grammy": "1.38.2",
+    "ink": "^6.3.0",
     "ink-spinner": "^5.0.0",
-    "ink-text-input": "^5.0.0",
-    "openai": "^4.0.0",
-    "react": "^18.0.0",
+    "ink-text-input": "^6.0.0",
+    "openai": "5.20.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "react-devtools-core": "^6.1.5",
     "yoga-wasm-web": "^0.3.3"
   },
