Fix YAML indentation in reproducible-builds workflow and update dependencies

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,5 +11,5 @@ services:
       - ~/.config/fosscode:/home/nodejs/.config/fosscode
     environment:
       - NODE_ENV=production
-    command: ["bun", "run", "src/index.ts"]
+    command: ['bun', 'run', 'src/index.ts']
     restart: unless-stopped
