--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build:docker": "docker build -t fosscode .",
     "typecheck": "tsc --noEmit",
     "lint": "eslint src/**/*.ts --quiet",
-    "format": "prettier --write src/**/*.{ts,tsx}",
+    "format": "prettier --write \"**/*.{ts,tsx,js,json,yml,yaml,md}\" --ignore-path .gitignore",
     "test": "jest --testPathIgnorePatterns=e2e",
     "test:e2e": "jest --testPathPatterns=e2e",
     "test:all": "jest",
