--- a/.github/workflows/disabled-reproducible-builds.yml
+++ b/.github/workflows/disabled-reproducible-builds.yml
@@ -14,6 +14,7 @@ on:
 
 jobs:
   test-reproducibility:
+    if: false
     name: Test Build Reproducibility
     runs-on: ubuntu-latest
 
@@ -92,6 +93,7 @@ jobs:
           echo "::endgroup::"
 
   cross-platform-reproducibility:
+    if: false
     name: Cross-Platform Reproducibility (${{ matrix.os }})
     runs-on: ${{ matrix.os }}
     strategy:
