--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,11 +43,10 @@ jobs:
       - name: Build
         run: bun run build
 
-        # Temporarily disabled due to npm 24-hour republish restriction
-        # - name: Setup npm registry
-        #   run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-        #   env:
-        #     NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+        - name: Setup npm registry
+          run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+          env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
-        # - name: Publish to npm
-        #   run: bunx npm publish
+        - name: Publish to npm
+          run: bunx npm publish
