--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,10 +5,8 @@ permissions:
 name: Publish
 
 on:
-  push:
-    branches: [main]
   release:
-    types: [released]
+    types: [created]
   workflow_dispatch:
 
 jobs:
