--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,47 +1,31 @@
 name: Publish
 
 on:
-  release: {}
-  workflow_dispatch: {}
+  push:
+    branches: [main]
 
 jobs:
   publish:
     runs-on: ubuntu-latest
 
-    steps:
+     steps:
       - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
 
-      - name: TruffleHog OSS
-        uses: trufflesecurity/trufflehog@v3.90.5
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          path: ./
-          extra_args: --debug --only-verified
+          node-version: '20.x'
+          registry-url: 'https://registry.npmjs.org'
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Setup Bun
         uses: oven-sh/setup-bun@v1
 
-      - name: Install dependencies
-        run: bun install
+      - name: Build
+        run: bun run build
 
-      - name: Run linter
-        run: bun run lint
-
-      - name: Run typecheck
-        run: bun run typecheck
-
-       - name: Run tests
-         run: bun run test
-         continue-on-error: true
-
-       - name: Build
-         run: bun run build
-
-       - name: Setup npm registry
-         run: echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
-         env:
-           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
-       - name: Publish to npm
-         run: bunx npm publish
+      - uses: JS-DevTools/npm-publish@v4
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
