--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "ink-spinner": "^5.0.0",
     "openai": "6.8.1",
     "picocolors": "^1.1.1",
+    "playwright": "^1.57.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "yoga-wasm-web": "^0.3.3"
