fix(ci): add attestations:write permission for Docker workflow

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,6 +16,7 @@ jobs:
       packages: write
       id-token: write
       actions: read
+      attestations: write
 
     steps:
       - name: Checkout code
