--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
+    "@types/bun": "^1.3.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.10.0",
     "@types/react": "^19.1.15",
